Add amount in Food package